Profile Host List feature!

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -902,8 +902,11 @@ editors also have the ability to make simple HTML tables for basic layouts.
 			<input type="text" name="profiles_profile_email" id="profiles_profile_email" value="" class="midi"/>			
 			</p>
 
-	
-		
+			<p>
+			<label for="profiles_profile_host_list">Profile Host List:</label>
+			<input type="text" name="profiles_profile_host_list" id="profiles_profile_host_list" value="" class="midi"/>			
+			</p>
+
 			<h2>
 				Enabled Features:
 			</h2>
