--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -113,6 +113,7 @@ $PROFILE_OPTIONS = {
 		
 	enabled                         => <!-- tmpl_var profiles_enabled default="0" -->, 
 	profile_email                   => '<!-- tmpl_var profiles_profile_email default="" -->', 
+	profile_host_list               => '<!-- tmpl_var profiles_host_list default="" -->', 
 	enable_captcha                  => <!-- tmpl_var profiles_enable_captcha  default="0" -->, 
 	enable_magic_subscription_forms => <!-- tmpl_var profiles_enable_magic_subscription_forms  default="0" -->, 
 	
