clear that but up

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1525,7 +1525,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 			<label for="s_program_url_S_PROGRAM_URL">
 				Secure Program URL: 
 			</label>
-			<input type="text" name="s_program_url_S_PROGRAM_URL" id="s_program_url_S_PROGRAM_URL" value="<!-- tmpl_var s_program_url_S_PROGRAM_URL -->" class="midi" />
+			<input type="text" name="s_program_url_S_PROGRAM_URL" id="s_program_url_S_PROGRAM_URL" value="" class="midi" />
 		</p>
 	</fieldset>
 	</div> 
