Trying to wrap this up!

--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -5,7 +5,8 @@
             <legend>Scheduling Options</legend>
             
             <p class="alert"> 
-                Current Server Time: <!-- tmpl_var date -->
+                Current Server Time: <!-- tmpl_var date --><br /> 
+                Schedules Lasted Checked: <!-- tmpl_var schedule_last_checked_time_localtime --> 
             </p>
         <p>
             <input type="checkbox" name="schedule_activated" id="schedule_activated" value="1" class="" />
