--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -61,42 +61,41 @@
         	<table class="stripedtable">
 
         		<tr>
-        			<td>
+        			<th>
         				<p>&nbsp;</p>
-        			</td>
+        			</th>
 
         			<!-- 
-        				<td>
+        				<th>
         					<p>ID</p>
-        				</td>
+        				</th>
         			--> 
 
-        			<td>
+        			<th>
         				<p>
         					<strong>
         						Subject
         					</strong>
         				</p> 
-        			</td>
-        			<td>
+        			</th>
+        			<th>
         				<p>
         					<strong>
         						Last Modified
         					</strong>
         				</p> 
-        			</td>
-        			<td>
+        			</th>
+        			<th>
         				<p>
         					<strong>
         						Screen
         					</strong>
         				</p> 
-        			</td>
-        			<td>
+        			</th>
+        			<th>
         				<p>&nbsp;</p>
         				</p> 
-        			</td>
-
+        			</th>
         		</tr> 
 
 
@@ -124,11 +123,9 @@
 
         			<td>
         				<p>
-        					<strong>
-        						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
-        							<!-- tmpl_var Subject escape="HTML" -->
-        						</a>
-        					</strong>
+    						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+    							<!-- tmpl_var Subject escape="HTML" -->
+    						</a>
         				</p> 
         			</td>
         			<td>
@@ -190,46 +187,46 @@
         	<table class="stripedtable">
 
         		<tr>
-        			<td>
+        			<th>
         				<p>&nbsp;</p>
-        			</td>
+        			</th>
 
-        					<td>
-                				<p>&nbsp;</p>
-                			</td>
+					<th>
+        				<p>&nbsp;</p>
+        			</th>
 
 
         			<!-- 
-        				<td>
+        				<th>
         					<p>ID</p>
-        				</td>
+        				</th>
         			--> 
 
-        			<td>
+        			<th>
         				<p>
         					<strong>
         						Subject
         					</strong>
-        				</p> 
+        				</h> 
         			</td>
-        			<td>
+        			<th>
         				<p>
         					<strong>
         						Last Modified
         					</strong>
         				</p> 
-        			</td>
-        			<td>
+        			</th>
+        			<th>
         				<p>
         					<strong>
         						Screen
         					</strong>
         				</p> 
-        			</td>
-        			<td>
+        			</th>
+        			<th>
         				<p>&nbsp;</p>
         				</p> 
-        			</td>
+        			</th>
 
         		</tr> 
 
@@ -267,11 +264,9 @@
 
         			<td>
         				<p>
-        					<strong>
-        						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
-        							<!-- tmpl_var Subject escape="HTML" -->
-        						</a>
-        					</strong>
+    						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+    							<!-- tmpl_var Subject escape="HTML" -->
+    						</a>
         				</p> 
         			</td>
         			<td>
@@ -317,125 +312,218 @@
 	
 	<div id="schedules">
 
-        <!-- tmpl_if schedule_index --> 
+        <!-- tmpl_if expr="(num_schedules > 0)" --> 
+	
+        	<!-- tmpl_if active_schedule_index -->
 
-        	<table class="stripedtable">
+                <h2>Active Schedules</h2> 
+            
+            	<table class="stripedtable">
+            		<tr>
+            			<th>
+            				<p>&nbsp;</p>
+            			</th>
+            			<!-- 
+            				<th>
+            					<p>ID</p>
+            				</th>
+            			--> 
+                        <th> 
+                            <p>
+                                <strong>
+                                    Sending On
+                                </strong>
+                            </p>
+                        </td>
+            			<th>
+            				<p>
+            					<strong>
+            						Subject
+            					</strong>
+            				</p> 
+            			</td>
+            			<th>
+            				<p>
+            					<strong>
+            						Last Modified
+            					</strong>
+            				</p> 
+            			</th>
+            			<th>
+            				<p>
+            					<strong>
+            						Screen
+            					</strong>
+            				</p> 
+            			</th>
+            			<th>
+            				<p>&nbsp;</p>
+            				</p> 
+            			</th>
+            		</tr> 
+             	<!-- tmpl_loop active_schedule_index --> 
+         	    
+            		    <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
+                			<td>
+                					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" id="restore_form_<!-- tmpl_var id -->">
+                						<input type="hidden" name="flavor" value="<!-- tmpl_var screen -->" /> 
+                						<input type="hidden" name="restore_from_draft" value="true" /> 
+                						<input type="hidden" name="draft_id" value="<!-- tmpl_var id -->" />
+                						<input type="hidden" name="draft_role" value="schedule" --> <!-- not doing this for drafts above -->
+                						<input type="submit" name="" value="Edit..." class="processing" />  
+                					</form> 
+                				</p> 
+                			</td>
+                			<!-- 
+                				<td>
+                					<p><!-- tmpl_var id --></p>
+                				</td>
+                			--> 
+                			<td>
+                			    <!-- tmpl_var schedule_localtime -->
+                			</td>
+                			<td>
+                				<p>
+            						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+            							<!-- tmpl_var Subject escape="HTML" -->
+            						</a>
+                				</p> 
+                			</td>
+                			<td>
+                				<p>
+                					<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+                						<!-- tmpl_var last_modified_timestamp --> 
+                					</a>
+                				</p> 
+                			</td>
+                			<td>
+                					<p>
+                						<!-- tmpl_if expr="(screen eq 'send_email')" --> 
+                							Send a Message
+                						<!-- /tmpl_if --> 
+                						<!-- tmpl_if expr="(screen eq 'send_url_email')" --> 
+                							Send a Webpage
+                						<!-- /tmpl_if --> 
+                					</p> 
+                			</td>
+                			<td>
+                					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="POST" class="delete_draft_form"  data-draft_role='Schedule'>
+                						<input type="hidden" name="id" value="<!-- tmpl_var id -->" />
+                						<input type="hidden" name="flavor" value="delete_draft" /> 
+                							<input type="submit" name="" value="[x]" class="alertive" />  		
+                					</form> 
+                				</p> 
+                			</td>
 
-        		<tr>
-        			<td>
-        				<p>&nbsp;</p>
-        			</td>
+                		</tr> 
+            	<!-- /tmpl_loop -->
+            	</table>  	
+            <!-- /tmpl_if --> 
+            
+        	<!-- tmpl_if inactive_schedule_index -->
 
-        			<!-- 
-        				<td>
-        					<p>ID</p>
-        				</td>
-        			--> 
+                <h2>Inactive Schedules</h2> 
 
-                    <td> 
-                        schedule_localtime
-                    </td>
-                    <td> 
-                        Activated?
-                    </td>
-                    
-        			<td>
-        				<p>
-        					<strong>
-        						Subject
-        					</strong>
-        				</p> 
-        			</td>
-        			<td>
-        				<p>
-        					<strong>
-        						Last Modified
-        					</strong>
-        				</p> 
-        			</td>
-        			<td>
-        				<p>
-        					<strong>
-        						Screen
-        					</strong>
-        				</p> 
-        			</td>
-        			<td>
-        				<p>&nbsp;</p>
-        				</p> 
-        			</td>
+            	<table class="stripedtable">
+            		<tr>
+            			<th>
+            				<p>&nbsp;</p>
+            			</th>
+            			<!-- 
+            				<th>
+            					<p>ID</p>
+            				</th>
+            			--> 
+                        <th> 
+            				<p>
+            					<strong>
+                            Sending On
+                            </strong>
+                        </p>
+                        </th>
+            			<th>
+            				<p>
+            					<strong>
+            						Subject
+            					</strong>
+            				</p> 
+            			</th>
+            			<th>
+            				<p>
+            					<strong>
+            						Last Modified
+            					</strong>
+            				</p> 
+            			</th>
+            			<th>
+            				<p>
+            					<strong>
+            						Screen
+            					</strong>
+            				</p> 
+            			</th>
+            			<th>
+            				<p>&nbsp;</p>
+            				</p> 
+            			</th>
+            		</tr> 
+             	<!-- tmpl_loop inactive_schedule_index --> 
+                		<tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
+                			<td>
+                					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" id="restore_form_<!-- tmpl_var id -->">
+                						<input type="hidden" name="flavor" value="<!-- tmpl_var screen -->" /> 
+                						<input type="hidden" name="restore_from_draft" value="true" /> 
+                						<input type="hidden" name="draft_id" value="<!-- tmpl_var id -->" />
+                						<input type="hidden" name="draft_role" value="schedule" --> <!-- not doing this for drafts above -->
+                						<input type="submit" name="" value="Edit..." class="processing" />  
+                					</form> 
+                				</p> 
+                			</td>
+                			<!-- 
+                				<td>
+                					<p><!-- tmpl_var id --></p>
+                				</td>
+                			--> 
+                			<td>
+                			    <!-- tmpl_var schedule_localtime -->
+                			</td>
+                			<td>
+                				<p>
+            						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+            							<!-- tmpl_var Subject escape="HTML" -->
+            						</a>
+                				</p> 
+                			</td>
+                			<td>
+                				<p>
+                					<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
+                						<!-- tmpl_var last_modified_timestamp --> 
+                					</a>
+                				</p> 
+                				<td>
+                					<p>
+                						<!-- tmpl_if expr="(screen eq 'send_email')" --> 
+                							Send a Message
+                						<!-- /tmpl_if --> 
+                						<!-- tmpl_if expr="(screen eq 'send_url_email')" --> 
+                							Send a Webpage
+                						<!-- /tmpl_if --> 
+                					</p> 
+                			</td>
+                			<td>
+                					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="POST" class="delete_draft_form"  data-draft_role='Schedule'>
+                						<input type="hidden" name="id" value="<!-- tmpl_var id -->" />
+                						<input type="hidden" name="flavor" value="delete_draft" /> 
+                							<input type="submit" name="" value="[x]" class="alertive" />  		
+                					</form> 
+                				</p> 
+                			</td>
 
-        		</tr> 
+                		</tr> 
+            	<!-- /tmpl_loop -->
+            	</table>  	
+            <!-- /tmpl_if --> 
 
-
-         	<!-- tmpl_loop schedule_index --> 
-        		<tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
-        			<td>
-        					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" id="restore_form_<!-- tmpl_var id -->">
-        						<input type="hidden" name="flavor" value="<!-- tmpl_var screen -->" /> 
-        						<input type="hidden" name="restore_from_draft" value="true" /> 
-        						<input type="hidden" name="draft_id" value="<!-- tmpl_var id -->" />
-        						<input type="hidden" name="draft_role" value="schedule" --> <!-- not doing this for drafts above -->
-        						<input type="submit" name="" value="Edit..." class="processing" />  
-        					</form> 
-        				</p> 
-        			</td>
-
-        			<!-- 
-        				<td>
-        					<p><!-- tmpl_var id --></p>
-        				</td>
-        			--> 
-        			
-        			<td>
-        			    <!-- tmpl_var schedule_localtime -->
-        			</td>
-        			<td>
-        			    <!-- tmpl_if schedule_activated -->
-        			        X
-        			    <!-- /tmpl_if -->
-        			</td>
-
-
-        			<td>
-        				<p>
-        					<strong>
-        						<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
-        							<!-- tmpl_var Subject escape="HTML" -->
-        						</a>
-        					</strong>
-        				</p> 
-        			</td>
-        			<td>
-        				<p>
-        					<a href="#" class="restore_from_draft_link" data-target="restore_form_<!-- tmpl_var id -->">
-        						<!-- tmpl_var last_modified_timestamp --> 
-        					</a>
-        				</p> 
-        				<td>
-        					<p>
-        						<!-- tmpl_if expr="(screen eq 'send_email')" --> 
-        							Send a Message
-        						<!-- /tmpl_if --> 
-        						<!-- tmpl_if expr="(screen eq 'send_url_email')" --> 
-        							Send a Webpage
-        						<!-- /tmpl_if --> 
-
-        					</p> 
-
-        			</td>
-        			<td>
-        					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="POST" class="delete_draft_form"  data-draft_role='Schedule'>
-        						<input type="hidden" name="id" value="<!-- tmpl_var id -->" />
-        						<input type="hidden" name="flavor" value="delete_draft" /> 
-        							<input type="submit" name="" value="[x]" class="alertive" />  		
-        					</form> 
-        				</p> 
-        			</td>
-
-        		</tr> 
-        	<!-- /tmpl_loop -->
-        	</table>  
         <!-- tmpl_else -->
         	<div class="clearskiesbox">
         		<p>
