--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -4,10 +4,12 @@
         <fieldset>
             <legend>Scheduling Options</legend>
             
-            <p class="alert"> 
-                Current Server Time: <!-- tmpl_var date --><br /> 
-                Schedules Lasted Checked: <!-- tmpl_var schedule_last_checked_time_localtime --> 
-            </p>
+            <div class="clearskiesbox">
+                <p> 
+                    <strong>Current Server Time:</strong> <!-- tmpl_var date --><br /> 
+                    <strong>Schedules Last Checked:</strong> <!-- tmpl_var schedule_last_checked_frt --> ago.
+                </p>
+            </div>
         <p>
             <input type="checkbox" name="schedule_activated" id="schedule_activated" value="1" class="" />
             <label for="schedule_activated">
