More of the things!

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -32,9 +32,19 @@
 	
 	<div id="show_table_results" style="width:100%; height:325px"></div>
 	<div id="show_table_results_loading"><p>&nbsp;</p></div>
-
+	<form> 
+        <p>
+            <label for="subscriber_history_type">
+                View As:
+            </label>
+            <select id="subscriber_history_type">
+            <option value="number">Number</option>
+            <option value="rate">Rate (%)</option>
+        </select>
+    </form>
 	<div id="subscriber_history_chart_loading"><p>&nbsp;</p></div>
 	<div id="subscriber_history_chart"style="width:100%; height:400px"></div>
+    
 	
 
 <fieldset> 
