--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -137,12 +137,15 @@
 			 <p>
 			  <strong>
 			    	  <a href="#" class="to_clickthroughs">Clickthroughs</a>
-			  </strong> 
+			  </strong>
 			 </p> 
 			 </td> 
 			 <td> 
 			 <p style="text-align:right"> 
-			  <a href="#" class="to_clickthroughs"><!-- tmpl_var clickthroughs --></a>
+			  <a href="#" class="to_clickthroughs">
+			  Total: <strong><!-- tmpl_var clickthroughs --></strong>,
+			  Unique: <strong><!-- tmpl_var unique_clickthroughs --></strong> - <strong><!-- tmpl_var unique_clickthroughs_percent -->%</strong>
+			  </a>
 			 </p>
 			</td> 
 			</tr>
