--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -99,7 +99,7 @@
 				<!-- tmpl_var login_switch_widget -->
 			<!-- /tmpl_if -->
 		<!-- /tmpl_if -->
-		| <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=logout">Log Out</a>
+		| <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=logout">Log Out</a>
 		
     </span>
     <div class="floatclear"></div>
