--- a/dada/templates/congrats_screen.tmpl
+++ b/dada/templates/congrats_screen.tmpl
@@ -15,7 +15,7 @@
 	  ($PROGRAM_ROOT_PASSWORD) has not been encrypted. Please consider 
 	  encrypting your <!-- tmpl_var name="PROGRAM_NAME" --> Root 
 	  Password as soon as possible.
-	  <a href="<!-- tmpl_var name="PROGRAM_URL" -->?f=pass_gen" target="_blank">
+	  <a href="<!-- tmpl_var name="PROGRAM_URL" -->?flavor=pass_gen" target="_blank">
 	   Click here 
 	  </a>
 	  (link opens a new window) to encrypt a password, then return here 
