--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -8,7 +8,7 @@
 	<div id="screentitlepadding">
 		Message Archives 
 		&#187; 
-		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_archive">
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive">
 			View Archive
 		</a>
 		 &#187;
