--- a/dada/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/templates/edit_archived_msg_prefs_screen.tmpl
@@ -53,6 +53,6 @@
 	
 	</form> 
 	
-	<p><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_archived_msg;id=<!-- tmpl_var id -->">&lt;-- Back to the Archived Message</a></p>
+	<p><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=edit_archived_msg;id=<!-- tmpl_var id -->">&lt;-- Back to the Archived Message</a></p>
 
 <!-- end edit_archived_msg_prefs_screen.tmpl --> 
