--- a/dada/templates/error_logged_into_different_list_screen.tmpl
+++ b/dada/templates/error_logged_into_different_list_screen.tmpl
@@ -14,7 +14,7 @@
 </li>
 
  <li>
-  <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=logout">Click Here To Logout of Your Current List.</a>
+  <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=logout">Click Here To Logout of Your Current List.</a>
 </li>
 
 </ul> 
