--- a/dada/templates/error_not_subscribed_screen.tmpl
+++ b/dada/templates/error_not_subscribed_screen.tmpl
@@ -46,7 +46,7 @@
 </p>
 
 <p>If you want to subscribe to this list instead, please visit 
-<a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML"-->&amp;email=<!-- tmpl_var subscriber.email -->">
+<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML"-->&amp;email=<!-- tmpl_var subscriber.email -->">
 	this list's main screen
 </a>.
 </p>
