--- a/dada/templates/error_unreadable_db_files_screen.tmpl
+++ b/dada/templates/error_unreadable_db_files_screen.tmpl
@@ -12,7 +12,7 @@
 	<!-- tmpl_var error_message --> 
 </pre> 
 
-<p><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=restore_lists">Attempt to Restore Your Lists</a></p>
+<p><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=restore_lists">Attempt to Restore Your Lists</a></p>
 
 <!-- end error_unreadable_db_files_screen.tmpl --> 
 
