--- a/dada/templates/filtered_list_activity_widget.tmpl
+++ b/dada/templates/filtered_list_activity_widget.tmpl
@@ -16,7 +16,7 @@
 		<!-- /tmpl_if --> 
 		
 		<!-- tmpl_if expr="(action eq 'subscribed')" --> 
-			&#8594; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8594; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Subscribed</strong>
 			<!-- tmpl_else -->
@@ -26,7 +26,7 @@
 		<!-- /tmpl_if -->
 		
 		<!-- tmpl_if expr="(action eq 'unsubscribed')" --> 
-			&#8592& <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8592& <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Unsubscribed</strong>
 			<!-- tmpl_else -->
@@ -36,7 +36,7 @@
 		<!-- /tmpl_if -->
 		
 		<!-- tmpl_if expr="(action eq 'confirmation_sent')" -->
-			&#8596; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8596; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Subscription Confirmation Sent</strong>
 			<!-- tmpl_else -->
@@ -49,9 +49,9 @@
 		<!-- tmpl_if expr="(action eq 'subscription_updated')" --> 
 			&#8596; 
 				<strong>Address Updated</strong> from, 
-				<!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- tmpl_else --><!-- tmpl_var email --><!-- /tmpl_if -->
+				<!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- tmpl_else --><!-- tmpl_var email --><!-- /tmpl_if -->
 				to,
-				<!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var updated_email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var updated_email --></a><!-- tmpl_else --><!-- tmpl_var updated_email --><!-- /tmpl_if -->					
+				<!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var updated_email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var updated_email --></a><!-- tmpl_else --><!-- tmpl_var updated_email --><!-- /tmpl_if -->					
 					
 			 on
 		<!-- /tmpl_if -->
