--- a/dada/templates/list_popup_login_form.tmpl
+++ b/dada/templates/list_popup_login_form.tmpl
@@ -51,7 +51,7 @@
     
     <!-- tmpl_if show_other_link --> 
         <br />
-        <a href="<!-- tmpl_var name="PROGRAM_URL" -->?f=<!-- tmpl_var ADMIN_FLAVOR_NAME -->;login_widget=text_box">
+        <a href="<!-- tmpl_var name="PROGRAM_URL" -->?flavor=<!-- tmpl_var ADMIN_FLAVOR_NAME -->;login_widget=text_box">
          other...
         </a>
     <!-- /tmpl_if --> 
