--- a/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
+++ b/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
@@ -27,7 +27,7 @@
           <p class="alert">
           <!-- tmpl_var query ESCAPE="HTML" --> is currently subscribed to your list (<!-- tmpl_var list_settings.list_name ESCAPE="HTML" -->) - 
           <strong> 
-          <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership&email=<!-- tmpl_var query ESCAPE="URL" -->&type=list">
+          <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var query ESCAPE="URL" -->&type=list">
            More Information...
            </a> 
           </strong>
