--- a/dada/templates/plugins/password_protect_directories/htaccess_file.tmpl
+++ b/dada/templates/plugins/password_protect_directories/htaccess_file.tmpl
@@ -11,7 +11,7 @@ ErrorDocument 401 <!-- tmpl_var custom_error_page -->
 
 <!-- tmpl_else -->
 
-ErrorDocument 401 <!-- tmpl_var PROGRAM_URL -->?f=profile&error_profile_login=1
+ErrorDocument 401 <!-- tmpl_var PROGRAM_URL -->?flavor=profile&error_profile_login=1
 
 <!-- /tmpl_if -->
 
