--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -23,7 +23,7 @@
 	</form> 
 	<!-- tmpl_if expr="DATA_CACHE == 1" -->
 		<p class="alert" style="float:right">
-			Data below is cached. <a href="<!-- tmpl_var Plugin_URL -->?f=clear_data_cache">Clear</a>
+			Data below is cached. <a href="<!-- tmpl_var Plugin_URL -->?flavor=clear_data_cache">Clear</a>
 		</p>
 		<div style="clear:both"></div>
 	<!-- /tmpl_if -->
