--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -10,7 +10,7 @@
 		Profiles
 		 &#187;
 		<!-- tmpl_if edit_field --> 
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=profile_fields"> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=profile_fields"> 
 			Profile Fields
 			</a>
 			 &#187; 
