--- a/dada/templates/profile_update_email_confirm.tmpl
+++ b/dada/templates/profile_update_email_confirm.tmpl
@@ -118,7 +118,7 @@
 			<!-- /tmpl_if --> 
 	
 			<p>	
-				<a href="<!-- tmpl_var PROGRAM_URL -->?f=u&list=<!-- tmpl_var list_settings.list -->&email=<!-- tmpl_var profile.email -->" target="_blank">
+				<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=u&list=<!-- tmpl_var list_settings.list -->&email=<!-- tmpl_var profile.email -->" target="_blank">
 					Begin unsubscription process for <!-- tmpl_var profile.update_email --> from, <!-- tmpl_var list_settings.list_name -->
 				</a>.
 			</p>
