--- a/dada/templates/send_url_email_process_screen.tmpl
+++ b/dada/templates/send_url_email_process_screen.tmpl
@@ -68,7 +68,7 @@
 			  </em>
 			 </strong>
 			 <!-- yeah! no! --> 
-			 <!--  and your Testers list (a href="!-- tmpl_var PROGRAM_URL --?f=view_list&type=testers"view/a) --> 
+			 <!--  and your Testers list (a href="!-- tmpl_var PROGRAM_URL --?flavor=view_list&type=testers"view/a) --> 
 			 
 		 message is being sent to the test recipient, <!-- tmpl_var test_recipient -->
 			</p>
