--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -155,11 +155,11 @@ Current Mass Mailings
 	
             <!-- tmpl_if Subject --> 
             
-           <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_monitor&id=<!-- tmpl_var id -->&type=<!-- tmpl_var type -->" title="Click to see details about this specific mass mailing  (<!-- tmpl_var Subject escape="HTML" -->)" ><!-- tmpl_var Subject escape="HTML" --></a>
+           <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor&id=<!-- tmpl_var id -->&type=<!-- tmpl_var type -->" title="Click to see details about this specific mass mailing  (<!-- tmpl_var Subject escape="HTML" -->)" ><!-- tmpl_var Subject escape="HTML" --></a>
            
            <!--tmpl_else --> 
            
-            <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_monitor&id=<!-- tmpl_var id -->&type=<!-- tmpl_var type -->"><!-- tmpl_var id escape="HTML" --></a>
+            <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor&id=<!-- tmpl_var id -->&type=<!-- tmpl_var type -->"><!-- tmpl_var id escape="HTML" --></a>
 
            <!--/tmpl_if --> 
 
