--- a/dada/templates/subscription_request_results.tmpl
+++ b/dada/templates/subscription_request_results.tmpl
@@ -16,7 +16,7 @@
 <ul>
 	<li>
 		<p>
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sign_in&list=<!-- tmpl_var list_settings.list escape="URL" -->">
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sign_in&list=<!-- tmpl_var list_settings.list escape="URL" -->">
 				Log into <!-- tmpl_var list_settings.list_name -->
 			</a>
 		</p>
