--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -80,7 +80,7 @@
 		</a>
 		</td> 
 		<td>
-	      <input type="button" class="cautionary" onClick="window.location='<!-- tmpl_var S_PROGRAM_URL -->?f=edit_archived_msg&id=<!-- tmpl_var id -->'" value="[edit]"/>
+	      <input type="button" class="cautionary" onClick="window.location='<!-- tmpl_var S_PROGRAM_URL -->?flavor=edit_archived_msg&id=<!-- tmpl_var id -->'" value="[edit]"/>
 		 </td>
 		</tr>
 
