--- a/dada/templates/view_archive_screen.tmpl
+++ b/dada/templates/view_archive_screen.tmpl
@@ -7,7 +7,7 @@
 	<div id="screentitlepadding">
 		Message Archives 
 		&#187; 
-		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_archive">
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive">
 			View Archive
 		</a>
 		 &#187;
@@ -31,7 +31,7 @@
  Subject: <!-- tmpl_var name="subject" ESCAPE="HTML" -->
 </h2>
 
-<iframe src="<!-- tmpl_var S_PROGRAM_URL -->?f=archive_bare;l=<!-- tmpl_var list_settings.list-->;id=<!-- tmpl_var id -->;admin=1" id="archived_message_body_container">
+<iframe src="<!-- tmpl_var S_PROGRAM_URL -->?flavor=archive_bare;l=<!-- tmpl_var list_settings.list-->;id=<!-- tmpl_var id -->;admin=1" id="archived_message_body_container">
 <!-- tmpl_var massaged_msg_for_display --> 
 </iframe>
 
