--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -7,6 +7,7 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+<div id="screen_meta" data-menu_highlight="web_services"></div>
 
 <!-- tmpl_if keys_reset --> 
     	<div class="clearskiesbox" id="alertbox">
