--- a/dada/installer-disabled/templates/upgrade_to_pro_dada.tmpl
+++ b/dada/installer-disabled/templates/upgrade_to_pro_dada.tmpl
@@ -1,5 +1,5 @@
 <p style="text-align:center">
 	<a href="http://dadamailproject.com/purchase/pro.html" target="_blank">
-		<img src="<!-- tmpl_var Self_URL -->?f=screen&screen=upgrade_to_pro_dada.jpg" style="border:0px" />
+		<img src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=upgrade_to_pro_dada.jpg" style="border:0px" />
 	</a>
 </p>
