--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -8,7 +8,7 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list">
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_list">
 			Membership
 		</a>
 		 &#187; <!-- tmpl_var email escape="HTML" -->
@@ -459,7 +459,7 @@
 
 
 	<p>
-	 <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->">&lt;&lt; Back</a>
+	 <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->">&lt;&lt; Back</a>
 	</p>
 
 <!-- end membership_screen.tmpl -->
